--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
@@ -136,9 +141,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<!-- <jvmArguments>
+					<jvmArguments>
 						-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005
-					</jvmArguments>  -->
+					</jvmArguments>
 
 				</configuration>
 			</plugin>
